Fixed issue where 'create account' button wasn't centered on mobile.
Started creating trending games carousel component for right side of hero section on landing page

--- a/checkpoint-gamingjournal/src/app/page.module.css
+++ b/checkpoint-gamingjournal/src/app/page.module.css
@@ -28,7 +28,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   padding-top: 5rem;
   width: 100%;
   z-index: 1;
@@ -47,7 +46,6 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  align-self: flex-start;
   padding-left: 0rem;
 }
 
@@ -64,6 +62,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  gap: 1rem;
 }
 
 .title {
@@ -73,7 +72,6 @@
   font-weight: 900;
   line-height: 1.1;
   text-align: left;
-  padding: .3rem;
   text-decoration: underline;
   text-underline-offset: 14px;
 
@@ -108,6 +106,12 @@
     padding-left: 30px;
     padding-right: 30px;
   }
+}
+
+.buttonContainer{
+  display: flex;
+  width: 100%;
+  justify-content: flex-start;
 }
 
 .createAccountButton {
@@ -245,6 +249,7 @@
   .landingPageHeader{
     flex-direction: column;
     align-items: center;
+    justify-content: center;
   }
 
   .leftSectionHeader{
@@ -252,10 +257,8 @@
     text-align: center;
   }
 
-  .createAccountButton{
-    align-self: center;
-    justify-self: center;
-    width: 90%;
+  .buttonContainer{
+    justify-content: center;
   }
 
   .titleContainer{
@@ -270,6 +273,15 @@
 }
 
 @media (max-width: 500px) {
+
+  .title {
+    font-size: 49px;
+    line-height: 1.2;
+  }
+
+  .subtitle{
+    font-size: 24px;
+  }
 
   .image{
     width: 120%;
